src/test/deca/context/valid/readany/plus_intvar_int_plus_readint_context.deca
// Description :
//
//      Test contextuellement correct de la somme d'un int et d'un readInt dans une variable int
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= 3 + readInt();
    print(y);
}