src/test/deca/context/invalid/object/class_new_calcul.deca
//  Description : 
// 
//      Test incorrect qui utilise un new calcul
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {

}

{
    A oA = new 3+1();
}